# typio-settings

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
data/applications/: typio-control.desktop  typio-settings.desktop
docs/: README.md
docs/adr/: 0001-record-architecture-decisions.md  0002-independent-settings-panel-repository.md  0003-tip-v1-uds-client.md  index.md  template.md
docs/dev/: documentation-style-guide.md
docs/explanation/: config-runtime-ownership.md  configuration-system.md  control-surfaces.md  index.md
docs/reference/: configuration.md  dbus-interface.md  index.md  ipc-protocol.md
src/: CMakeLists.txt  control_bind.c  control_bind.h  control_config.c  control_internal.h  control_models.c  control_ui.c  control_widgets.c  control_widgets.h  control_window.c  main.c  meson.build  platform.c  platform.h  settings_bind.c  settings_bind.h  settings_config.c  settings_internal.h  settings_models.c  settings_ui.c  settings_widgets.c  settings_widgets.h  tip_client.c  tip_client.h  typio-control.css  typio-control.gresource.xml
tests/: meson.build  test_control_config.c  test_settings_config.c
